--- a/umbrella-rental-system-front/package.json
+++ b/umbrella-rental-system-front/package.json
@@ -40,5 +40,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
